kubernetes/gke-mm-user-mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-user-mysql
  labels:
    app: mm-user
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: mm-user
    tier: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-user-mysql
  labels:
    app: mm-user
spec:
  selector:
    matchLabels:
      app: mm-user
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mm-user
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
