kubernetes/local-mm-user-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-user-api
  labels:
    app: mm-user-api
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: user-api
  selector:
    app: mm-user-api
    tier: api
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-user-api
  labels:
    app: mm-user-api
spec:
  selector:
    matchLabels:
      app: mm-user-api
      tier: api
  template:
    metadata:
      labels:
        app: mm-user-api
        tier: api
    spec:
      containers:
      - image: np123dev/user_manager:latest
        name: user-api
        ports:
        - containerPort: 8081
          name: user-api
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 100m
---
